resources/sass/calendar/inputs.scss
/* ... */
.detail-column{
    display: inline-flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: flex-start;
    flex-grow: 1;
    padding: .25rem;
}

.detail-grow{
    flex: 1 0 auto;
}
.detail-shrink{
    flex: 0 1 auto;
}


.slider_percentage{
    margin:5px 10px;
    width: calc(100% - 20px);
}

.clock-input{
    width:40% !important;
}

.detail-row, .detail-select-container{
    display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin-bottom:5px;
    flex: 0 1 auto;
}

.detail-row.no-margin{
    margin-bottom: 0;
}

.detail-label{
    margin-top:0.125em;
    font-size:1.25em;
    flex: 1 0 auto;
}

.detail-select{
    line-height: 28px;
    flex: 1 1 auto;
}

label{
    margin-bottom:0 !important;
}

.detail-text{
    line-height: 28px;
    margin-right:1%;
}

.detail-text.right-align{
    text-align: right;
}

.input_buttons{
    display: inline-flex;
    flex-direction: row;
    flex-wrap: nowrap;
}

.input_buttons select, .input_buttons input{
    flex: 0 1 auto;
    margin:0 2px;
    height:100%;
    width:74%;
}

.half.input_buttons select, .half.input_buttons input{
    width:61%;
}

.sub-btn, .add-btn{
    flex: 1 0 auto;
    width:29px;
    height:29px;
    margin: 0 2px;
    padding:0;
}

.input_buttons i{
    position:relative;
    top:0.05em;
}

.input_buttons .clocktext{
    font-size:0.75em;
}

.hour_input, #current_hour{
    width:24%;
    text-align:right;
}
.minute_input, #current_minute{
    width:24%;
    text-align:left;
}


.sortable-container .detail-column input, .sortable-container .detail-row input{
    order:2;
}

.sortable-container .detail-column input[type="text"], .sortable-container .detail-row input[type="text"]{
    padding:3px;
}

.sortable-container .detail-column input[type="number"], .sortable-container .detail-row input[type="number"]{
    padding:3px;
}

.sortable-container .detail-column input::placeholder, .sortable-container .detail-row input::placeholder{
    font-size:0.7em;
}

.sortable-container .detail-column input[type="checkbox"], .sortable-container .detail-row input[type="checkbox"]{
    width:18px;
    text-align: left;
}

.sortable-container option:disabled {
    background-color: #D32F2F;
    color: #FFFFFF;
}

.inter-month-name{
    flex:3.9 1 auto !important;
}

.internal-list-name, .internal-list-name{
    width:100% !important;
}

.event-category-list{
    flex: 1;
    order:2;
}

.week_list, .cycle_list{
    width:100%;
}

.open-edit-event-ui{
    text-align: left;
    height:100%;
    flex-grow: 1;
    line-height: 23px;
    border:0;
    cursor: pointer;
    display:block;
    overflow: hidden;
    font-size:0.8em;
}

.remove-container{
    width:100%;
    height:100%;
    z-index:10;
    pointer-events: none;
    display: flex;
    align-items: center;
    top: 0px;
    position: absolute;
}

.remove-container-text{
    text-align: center;
    display:none;
    margin:auto;
    font-size:11pt;
    order: 2;
    flex-grow: 1;
}

.remove-container > .btn_remove, .remove-container > .btn_cancel, .remove-container > .btn_accept{
    pointer-events: auto;
    height:40px;
    width:40px;
    border-radius: 0;
    padding: 7px 0 0;
    font-size:13pt;
    cursor: pointer;
}

.remove-container > .btn_remove {
    position: absolute;
    right: 2px;
    top: 4px;
}

.remove-container > .btn_cancel{
    display:none;
    order: 3;
}

.remove-container > .btn_accept{
    left:0;
    display:none;
    order: 1;
}

.remove-container > .handle{
    cursor: move;
}

.form-inline{
    width:100%;
    margin:5px 0 10px 0;
}

.form-inline .name{
    order: 1;
    margin-right:1%;
    flex-grow: 1;
}
.form-inline .type{
    order: 2;
    margin-right:1%;
}
.form-inline .add{
    order: 3;
}

.form-inline.timespan .name {
    margin-right: 0;
    margin-bottom: 0.25rem;
}

.form-inline.timespan .type {
    flex-grow: 1;
}

.form-inline.leap .name{
    order: 1;
    flex-grow: 2;
    margin-right: 0;
}

.form-inline.leap .type{
    order: 2;
    margin-right:1%;
    flex-grow: 2;
}
.form-inline.leap .add{
    order: 3;
}

.form-inline.moon .add{
    order: 2;
}

.form-inline.moon .cycle{
    order: 3;
    width:49.5%;
    margin-right:1%;
    margin-top:1%;
}

.form-inline.moon .shift{
    order: 3;
    width:49.5%;
    margin-top:1%;
}

.moon_inputs .moon_color{
    width:0;
    order:2;
    flex:2 1 auto;
}


.form-inline.seasons .name{
    order: 1;
    margin-right:1%;
    flex-grow: 1;
}

.form-inline.seasons .add{
    order: 2;
}

#copy_location_data{
    margin-bottom:10px;
}


.form-inline.locations .name{
    order: 1;
    margin-right:1%;
    flex-grow: 1;
}

.form-inline.locations .add{
    order: 2;
}


.form-inline.cycle .name{
    order: 1;
    width: 100%;
}

.form-inline.cycle .add{
    order: 2;
    width: 99%;
    margin-top:1%;
}

.form-inline.cycle .cycle_test_container{
    order: 3;
    width:100%;
    margin-top:1%;
}

.form-inline.cycle #cycle_test_result{
    order: 4;
    width:100%;
    margin-top:1%;
}

.form-inline.cycle #cycle_test_input{
    width:25%;
    margin-top:1%;
}

.form-inline.global_week .name{
    order:2;
    margin-right:1%;
    flex-grow: 1;
}

.form-inline.eras .name, .form-inline.event_categories .name, .form-inline.events .name{
    order:1;
    width:79%;
    margin-right:1%;
}


.form-inline .setting{
    border-radius: 0;
    margin-bottom:-2px !important;
}

.form-inline .setting.first{
    border-radius: 5px 5px 0 0;
}

.form-inline .setting.last{
    border-radius: 0 0 5px 5px;
    margin-bottom:1em !important;
}

.form-inline label{
    display:block !important;
}

.view_type {
    height: auto;
}

.separator, .spacey_separator{
    width:100%;
    border: 0;
    height: 1px;
    background: rgba(166, 168, 179, 0.32);
    margin-top: 5px;
}

.spacey_separator{
    margin:10px 0 15px 0;
}

.wrap-collapsible{
    width: 100%;

}
/* ... */

